--- a/modal.css
+++ b/modal.css
@@ -34,6 +34,11 @@ img {
   overflow: hidden;
   margin: 3.5%;
 }
+
+.topnav img{
+  max-width: 100%;
+  height: auto;
+}
 .header-logo {
     float: left;
 }
@@ -69,6 +74,10 @@ img {
 }
 
 @media screen and (max-width: 768px) {
+  .topnav{
+    display: flex;
+    justify-content: space-between;
+  }
   .topnav a {display: none;}
   .topnav a.icon {
     float: right;
@@ -97,7 +106,6 @@ img {
   .topnav a.icon {
     float: right;
     display: block;
-    margin-top: -15px;
   }
 } 
 
@@ -111,8 +119,7 @@ main {
   margin: 1px 20px 15px;
   border-radius: 2rem;
   text-align: justify;
-
-
+  
 }
 
 .modal-btn {
@@ -420,7 +427,7 @@ input[data-error]::after {
   color: #fff;
   position: relative;
   text-align: left;
-  min-width: 424px;
+  min-width: 424px; 
 }
 .hero-content::after {
   content: "";
@@ -478,6 +485,14 @@ footer {
   padding-right: 2vw;
   margin: 0 20px;
 }
+
+@media screen and (max-width: 1000px){
+  .hero-headline {
+    font-size: 5rem;
+  }
+}
+
+
 @media screen and (max-width: 800px) {
   .hero-section {
     display: block;
@@ -487,6 +502,7 @@ footer {
     background: #fff;
     color: #000;
     padding: 20px;
+    min-width: 2px;
   }
   .hero-content::after {
     content: unset;
@@ -495,7 +511,7 @@ footer {
     display: none;
   }
   .hero-headline {
-    font-size: 4.5rem;
+    font-size: 3.5rem;
     white-space: normal;
   }
   .hero-text {
@@ -514,6 +530,13 @@ footer {
   .copyrights {
     margin-top: 50px;
     text-align: center;
+  }
+}
+
+@media screen and (max-width: 340px){
+  .hero-headline {
+    font-size: 2.5rem;
+    white-space: normal;
   }
 }
 
